add mongo database
